<resources>
    <string name="app_name">ManifestoFinal</string>
    <string name="big_m">M</string>
    <string name="manifesto_title">Manifesto</string>
    <string name="no_guests_messege">No one has currently signed in. Be the first to sign in.</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_in_at_the_registry">Sign in at the registry</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="emergency_contact_number">Emergency Contact Number</string>
    <string name="emegency_contact_name">Emegency Contact Name</string>
    <string name="save_and_sign">Save and Sign</string>
    <string name="image_of_city_in_background">image of city in background</string>
    <string name="error_name">Must be 2–12 characters long and have no special characters</string>
    <string name="error_phone">Must be 10 digit number</string>
    <string name="error_email">Invalid email. Try again.</string>
</resources>
