<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModelHome"
            type="com.example.manifestofinal.home.HomeScreenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_constraint_main"
        android:background="@drawable/background_purple"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeScreenFragment">

        <ImageView
            android:id="@+id/home_city_backdrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/bigger_city_backdrop"
            style="@style/city_backdrop_stretched"
            android:contentDescription="@string/image_of_city_in_background" />
        <TextView
            android:id="@+id/big_m_title"
            android:text="@string/big_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/big_m_home" />
        <TextView
            android:id="@+id/manifesto_title"
            android:text="@string/manifesto_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/big_m_title"
            style="@style/manifesto_title" />
        <TextView
            android:id="@+id/home_screen_messege"
            android:text="@string/no_guests_messege"
            android:paddingTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_city_backdrop"
            android:visibility="visible"
            style="@style/home_screen_messege" />
        <Button
            android:id="@+id/home_sign_in_button"
            android:text="@string/sign_in_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/sign_in_button_yellow"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/guests_present_messege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/sign_in_at_the_registry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_city_backdrop"
            android:visibility="visible"
            style="@style/home_screen_messege"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/guestList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:paddingTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guests_present_messege"
            android:layout_marginHorizontal="30dp"
            android:visibility="visible"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
